[gd_scene load_steps=2 format=3 uid="uid://bwkmbcplum1ig"]

[ext_resource type="Script" path="res://Level_1/Scenes/gameplay_menu.gd" id="1_v2l5x"]

[node name="gameplay_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2l5x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 487.0
offset_top = 258.0
offset_right = 663.0
offset_bottom = 359.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Return To Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return To Main Menu"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return To Main Menu" to="." method="_on_return_to_main_menu_pressed"]
